--- a/GameAPI/GameAPI/appsettings.json
+++ b/GameAPI/GameAPI/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-CS3MSQ2S;Initial Catalog=PRUGame;Persist Security Info=True;User ID=sa;Password=12345;TrustServerCertificate=True"
+    "DefaultConnection": "Data Source=MSI\\SQLEXPRESS;Initial Catalog=PRUGame;Persist Security Info=True;User ID=sa;Password=12345;TrustServerCertificate=True"
   }
 }
